# scikits.odes.docker

./: Dockerfile  README.md
sundials/build_sundials-3.1.1/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
sundials/build_sundials-3.1.1/FortranTest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ctest1  ctest1.c  ctest2  ctest2.c  ftest
sundials/build_sundials-3.1.1/LapackTest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ltest  ltest.c
sundials/build_sundials-3.1.1/include/sundials/: sundials_config.h
sundials/build_sundials-3.1.1/src/arkode/: Makefile  cmake_install.cmake  libsundials_arkode.so.2.1.1
sundials/build_sundials-3.1.1/src/cvode/: Makefile  cmake_install.cmake  libsundials_cvode.so.3
sundials/inst_sundials-3.1.1/lib/: libsundials_arkode.so.2  libsundials_cvode.so.3.1.1  libsundials_cvodes.so.3  libsundials_ida.so.3  libsundials_kinsol.so.3  libsundials_nvecserial.so.3.1.1  libsundials_sunlinsolband.so.1.1.1  libsundials_sunlinsoldense.so.1  libsundials_sunlinsoldense.so.1.1.1  libsundials_sunlinsollapackband.so.1  libsundials_sunlinsollapackband.so.1.1.1  libsundials_sunlinsollapackdense.so.1  libsundials_sunlinsollapackdense.so.1.1.1  libsundials_sunlinsolspbcgs.so.1.1.1  libsundials_sunlinsolspfgmr.so.1.1.1  libsundials_sunlinsolspgmr.so.1  libsundials_sunlinsolsptfqmr.so.1.1.1  libsundials_sunmatrixband.so.1.1.1  libsundials_sunmatrixdense.so.1  libsundials_sunmatrixdense.so.1.1.1  libsundials_sunmatrixsparse.so.1  libsundials_sunmatrixsparse.so.1.1.1
(+226 files in other folders)
