CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
PROJECT(ctest2 C)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_BUILD_TYPE "")
SET(CMAKE_C_FLAGS "")
SET(CMAKE_C_FLAGS_RELEASE "-O3 -DNDEBUG")
SET(CMAKE_C_FLAGS_DEBUG "-g")
SET(CMAKE_C_FLAGS_RELWITHDEBUGINFO "")
SET(CMAKE_C_FLAGS_MINSIZE "")
ADD_EXECUTABLE(ctest2 ctest2.c)
FIND_LIBRARY(FLIB flib /root/sundials/build_sundials-3.1.1/FortranTest)
TARGET_LINK_LIBRARIES(ctest2 ${FLIB})
