CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
PROJECT(ltest C)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_BUILD_TYPE "")
SET(CMAKE_C_FLAGS "")
SET(CMAKE_C_FLAGS_RELEASE "-O3 -DNDEBUG")
SET(CMAKE_C_FLAGS_DEBUG "-g")
SET(CMAKE_C_FLAGS_RELWITHDEBUGINFO "")
SET(CMAKE_C_FLAGS_MINSIZE "")
ADD_EXECUTABLE(ltest ltest.c)
TARGET_LINK_LIBRARIES(ltest /usr/lib/x86_64-linux-gnu/libopenblas.so;/usr/lib/x86_64-linux-gnu/libopenblas.so)
